--- a/templates/homebase/home.html
+++ b/templates/homebase/home.html
@@ -7,13 +7,14 @@
                 <div class="card-header text-center">
                     <h5>Changelog</h5>
                 </div>
-                <div class="card-body text-center">
-                    <p class="h5">Version 0.2!</p>
-                    <!-- <hr> -->
+                <div class="card-body text-center overflow-auto changelog-card">
+                    <p class="h5">Version 0.3</p>
+                    <p>Site is now on github as repository, changed how volumes page looks.</p>
+                    <hr>
+                    <p class="h5">Version 0.2</p>
                     <p>Added "Volumes" page with the volumes of memes I have created over the years.</p>
                     <hr>
-                    <p class="h5">Version 0.1!</p>
-                    <!-- <hr> -->
+                    <p class="h5">Version 0.1</p>
                     <p>No github, no database models, no user profile, literally just the home screen.</p>
                     <hr>
                 </div>
