--- a/templates/music/shelves.html
+++ b/templates/music/shelves.html
@@ -2,16 +2,18 @@
 
 {% block content %}
 <div class="container page-container">
-    <div class="row g-0">
-        <div class="row">
-            <div class="col-4">
-                
+    <div class="row g-2">
+    {% for track in my_playlist %}
+        <div class="col-3">
+            <div class="card">
+                <div class="card-header text-center">
+                    {{ track.0 }}
+                </div>
+                <img src='{{ track.1 }}'>
             </div>
-            <div class="col-4">
-
-            </div>
-            <div class="col-4"></div>
         </div>
+    {% endfor %}
     </div>
+    
 </div>
 {% endblock content %}
