--- a/templates/music/shelves.html
+++ b/templates/music/shelves.html
@@ -2,14 +2,21 @@
 
 {% block content %}
 <div class="container page-container">
-    <div class="row g-2">
+    <div class="row g-2 p-0">
     {% for track in my_playlist %}
-        <div class="col-3">
-            <div class="card">
+        <div class="col-4">
+            <div class="card music-card">
                 <div class="card-header text-center">
-                    {{ track.0 }}
+                    <h6>{{ track.name }}</h6>
+                    <p>{{ track.artists }}</p>
                 </div>
-                <img src='{{ track.1 }}'>
+                <a href="{{ track.track_url }}" target="_blank" class="hvr-float"><img src='{{ track.image }}'></a>
+                
+                <audio controls>
+                    <source src="{{ track.preview_url }}" type="audio/mp3">
+                </audio>
+                
+                
             </div>
         </div>
     {% endfor %}
