--- a/templates/music/shelves.html
+++ b/templates/music/shelves.html
@@ -3,24 +3,16 @@
 {% block content %}
 <div class="container page-container">
     <div class="row g-2 p-0">
-    {% for track in my_playlist %}
-        <div class="col-4">
-            <div class="card music-card">
+        {% for playlist in playlists %}
+        <div class="col-6">
+            <div class="card playlist-card">
                 <div class="card-header text-center">
-                    <h6>{{ track.name }}</h6>
-                    <p>{{ track.artists }}</p>
+                    {{ playlist.name }}
                 </div>
-                <a href="{{ track.track_url }}" target="_blank" class="hvr-float"><img src='{{ track.image }}'></a>
-                
-                <audio controls>
-                    <source src="{{ track.preview_url }}" type="audio/mp3">
-                </audio>
-                
-                
+                <a href="{% url 'playlist' playlist.id %}"><img src="{{ playlist.image }}"></a>
             </div>
         </div>
-    {% endfor %}
+        {% endfor %}
     </div>
-    
 </div>
 {% endblock content %}
