--- a/templates/homebase/home.html
+++ b/templates/homebase/home.html
@@ -8,6 +8,9 @@
                     <h5>Changelog</h5>
                 </div>
                 <div class="card-body text-center overflow-auto changelog-card">
+                    <p class="h5">Version 0.6</p>
+                    <p>Music shelves page now shows two playlists, "Chillin' 'n Rockin'" & "Dark 'n Heavy"</p>
+                    <hr>
                     <p class="h5">Version 0.5</p>
                     <p>Music shelves page looking a bit better, still only using 1 playlist, might change that to show others aswell.</p>
                     <hr>
