--- a/templates/music/playlist.html
+++ b/templates/music/playlist.html
@@ -2,8 +2,18 @@
 
 {% block content %}
 <div class="container page-container">
+    <div class="row mb-4">
+        <div class="col-12 text-center playlist-header">
+            <a href="{% url 'music-shelves' %}" class="text-decoration-none display-3 hvr-grow">Back to shelves</a>
+        </div>
+    </div>
+    <div class="row mb-4">
+        <div class="col-12 text-center playlist-header">
+            <a href="{{ my_playlist.2 }}" target='_blank' class="text-decoration-none display-6 hvr-grow">Link to this playlist</a>
+        </div>
+    </div>
     <div class="row g-2 p-0">
-    {% for track in my_playlist %}
+    {% for track in my_playlist.0 %}
         <div class="col-4 mb-4">
             <div class="card music-card">
                 <div class="card-header text-center">
@@ -13,7 +23,7 @@
                 <a href="{{ track.track_url }}" target="_blank" class="hvr-float"><img src='{{ track.image }}'></a>
                 
                 <audio controls>
-                    <source src="{{ track.preview_url }}" type="audio/mp3">
+                    <source src="{{ track.preview_url }}" type="audio/mpeg">
                 </audio> 
             </div>
         </div>
