big commit, music is now db, have to change music shelves pages to get from db instead of api

--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -37,7 +37,7 @@ body {
     }
 
     25% {
-        top: 8px;
+        top: 6px;
     }
 
     50% {
@@ -45,7 +45,7 @@ body {
     }
 
     75% {
-        top: -8px;
+        top: -6px;
     }
 
     100% {
@@ -253,5 +253,9 @@ $speed: 0.25s;
 }
 
 .playlists-header {
+    color: #{$color-lightwhite};
+}
+
+footer {
     color: #{$color-lightwhite};
 }
