--- a/templates/music/shelves.html
+++ b/templates/music/shelves.html
@@ -10,7 +10,7 @@
     <div class="row gx-5 p-0">
         {% for playlist in playlists %}
         <div class="col-6">
-            <div class="card playlist-card hvr-float">
+            <div class="card playlist-card hvr-float mb-5">
                 <div class="card-header text-center">
                     <p class="display-5">{{ playlist.name }}</p>
                 </div>
