--- a/static/css/base.css
+++ b/static/css/base.css
@@ -14,13 +14,13 @@ body {
     top: 0px;
   }
   25% {
-    top: 8px;
+    top: 6px;
   }
   50% {
     top: 0px;
   }
   75% {
-    top: -8px;
+    top: -6px;
   }
   100% {
     top: 0px;
@@ -202,6 +202,10 @@ body {
 }
 
 .playlists-header {
+  color: #ddf8e8;
+}
+
+footer {
   color: #ddf8e8;
 }
 
