--- a/templates/base.html
+++ b/templates/base.html
@@ -15,9 +15,9 @@
 <body>
     <div class="container" id="base-container">
         <div class="title-container">
-            {% block title %}<a class="display-3 fw-bold base-title text-decoration-none hvr-grow" href="{% url 'home' %}">Regnum Ova</a>{% endblock title %}
+            {% block title %}<a class="display-3 fw-bold base-title text-decoration-none hvr-grow hvr-icon-hang" href="{% url 'home' %}"><i class="fa-solid fa-egg hvr-icon"></i>&nbsp;&nbsp;Regnum Ova&nbsp;&nbsp;<i class="fa-solid fa-egg hvr-icon"></i></a>{% endblock title %}
         </div>
-        <nav class="navbar navbar-dark">
+        <nav class="navbar navbar-dark position-relative">
             <div class="container-fluid">
                 <a class="btn-flip mx-auto w-100 text-center" href="#" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
                     aria-controls="offcanvasDarkNavbar" data-back="Navbar" data-front="Open"></a> 
@@ -32,23 +32,26 @@
                                 <a class="nav-link hvr-icon-wobble-vertical hvr-underline-from-center" href="{% url 'volumes' %}"><i class="fa-solid fa-folder hvr-icon"></i>&nbsp;&nbsp;&nbsp;&nbsp;Volumes&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-egg hvr-icon"></i></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link hvr-icon-wobble-vertical hvr-underline-from-center" href="{% url 'music-shelves' %}"><i class="fa-solid fa-music hvr-icon"></i>&nbsp;&nbsp;&nbsp;&nbsp;Music Shelves&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-egg hvr-icon"></i></a>
+                                <a class="nav-link hvr-icon-wobble-vertical hvr-underline-from-center" href="{% url 'music-shelves' %}"><i class="fa-solid fa-music hvr-icon"></i>&nbsp;&nbsp;&nbsp;&nbsp;Music Shelf&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-egg hvr-icon"></i></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Link</a>
+                                <a class="nav-link hvr-icon-wobble-vertical hvr-underline-from-center" href="{% url 'games-shelves' %}"><i class="fa-solid fa-gamepad hvr-icon"></i>&nbsp;&nbsp;&nbsp;&nbsp;Games Shelf&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-egg hvr-icon"></i></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Link</a>
+                                <a class="nav-link hvr-icon-wobble-vertical hvr-underline-from-center" href="{% url 'volumes' %}"><i class="fa-solid fa-folder hvr-icon"></i>&nbsp;&nbsp;&nbsp;&nbsp;Volumes&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-egg hvr-icon"></i></a>
                             </li>
+                            {% if user.is_staff %}
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Link</a>
+                                <a class="nav-link hvr-icon-wobble-vertical hvr-underline-from-center" href="{% url 'admin:index' %}"><i class="fa-solid fa-crown hvr-icon"></i>&nbsp;&nbsp;&nbsp;&nbsp;Admin&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-egg hvr-icon"></i></a>
                             </li>
+                            {% endif %}
                         </ul>
                     </div>
                 </div>
             </div>
         </nav>
         {% block content %}{% endblock content %}
+        {% include 'footers/footer.html' %}
     </div>
 
     {% block scripts %}
