--- a/templates/music/shelves.html
+++ b/templates/music/shelves.html
@@ -14,7 +14,7 @@
                 <div class="card-header text-center">
                     <p class="display-5">{{ playlist.name }}</p>
                 </div>
-                <a href="{% url 'playlist' playlist.id %}" class="hvr-float"><img src="{{ playlist.image }}"></a>
+                <a href="{% url 'playlist' playlist.id %}" class="hvr-float"><img src="{{ playlist.image_url }}"></a>
             </div>
         </div>
         {% endfor %}
