--- a/templates/homebase/home.html
+++ b/templates/homebase/home.html
@@ -8,6 +8,12 @@
                     <h5>Changelog</h5>
                 </div>
                 <div class="card-body text-center overflow-auto changelog-card">
+                    <p class="h5">Version 0.8</p>
+                    <p>Music shelves data now grabbing data from database, no need for external api calls now.</p>
+                    <hr>
+                    <p class="h5">Version 0.7</p>
+                    <p>New page: "Games Shelf", currently very ugly. Have to populate data manually. Gonna be a long time till that page is looking how I want it to look.</p>
+                    <hr>
                     <p class="h5">Version 0.6</p>
                     <p>Music shelves page now shows two playlists, "Chillin' 'n Rockin'" & "Dark 'n Heavy"</p>
                     <hr>
