--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href='{% static "css/base.css" %}'>
     <link rel="stylesheet" type="text/css" href='{% static "css/hover-min.css" %}'>
-
+    <link rel="icon" type="image/x-icon" href="{% static 'favicon/favicon.ico' %}">
 </head>
 
 <body>
