--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href='{% static "css/base.css" %}'>
+    <link rel="stylesheet" type="text/css" href='{% static "css/main.css" %}'>
     <link rel="stylesheet" type="text/css" href='{% static "css/hover-min.css" %}'>
     <link rel="icon" type="image/x-icon" href="{% static 'favicon/favicon.ico' %}">
 </head>
@@ -38,7 +38,7 @@
                                 <a class="nav-link hvr-icon-wobble-vertical hvr-underline-from-center" href="{% url 'games-shelves' %}"><i class="fa-solid fa-gamepad hvr-icon"></i>&nbsp;&nbsp;&nbsp;&nbsp;Games Shelf&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-egg hvr-icon"></i></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link hvr-icon-wobble-vertical hvr-underline-from-center" href="{% url 'volumes' %}"><i class="fa-solid fa-folder hvr-icon"></i>&nbsp;&nbsp;&nbsp;&nbsp;Volumes&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-egg hvr-icon"></i></a>
+                                <a class="nav-link hvr-icon-wobble-vertical hvr-underline-from-center" href="{% url 'book-shelves' %}"><i class="fa-solid fa-book hvr-icon"></i>&nbsp;&nbsp;&nbsp;&nbsp;Book Shelf&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-egg hvr-icon"></i></a>
                             </li>
                             {% if user.is_staff %}
                             <li class="nav-item">
