--- a/templates/homebase/home.html
+++ b/templates/homebase/home.html
@@ -8,6 +8,9 @@
                     <h5>Changelog</h5>
                 </div>
                 <div class="card-body text-center overflow-auto changelog-card">
+                    <p class="h5">Version 0.9</p>
+                    <p>New shelf; Books! Not very populated at all, will still have to work on that. Games shelf looking good though, getting data from IGDB, has screenshots and all! Still have to populate genres & companies of each game though.</p>
+                    <hr>
                     <p class="h5">Version 0.8</p>
                     <p>Music shelves data now grabbing data from database, no need for external api calls now.</p>
                     <hr>
@@ -36,14 +39,28 @@
             </div>
         </div>
         <div class="col-9">
-            <div class="card">
-                <div class="card-header text-center">
-                    <h5>A new website</h5>
+            <div class="row g-0 pb-1">
+                <div class="card home-card">
+                    <div class="card-header text-center">
+                        <h5>A good website</h5>
+                    </div>
+                    <div class="card-body text-center">
+                        <p class="h5">My little website is getting there. So far it's been a blast working on it</p>
+                        <p></p>
+                        <p>I'm enjoying doing this. Perhaps at the end of the month I will have a great looking website at the end of it</p>
+                    </div>
                 </div>
-                <div class="card-body text-center">
-                    <p class="h5">In the last week or so I have decided to make a new website, so far it's looking pretty meh.</p>
-                    <p></p>
-                    <p>But it still has a long way to go.</p>
+            </div>
+            <div class="row g-0 py-1">
+                <div class="card home-card">
+                    <div class="card-header text-center">
+                        <h5>A new website</h5>
+                    </div>
+                    <div class="card-body text-center">
+                        <p class="h5">In the last week or so I have decided to make a new website, so far it's looking pretty meh.</p>
+                        <p></p>
+                        <p>But it still has a long way to go.</p>
+                    </div>
                 </div>
             </div>
         </div>
