--- a/templates/games/shelves.html
+++ b/templates/games/shelves.html
@@ -23,7 +23,7 @@
     </div>
     <div class="row g-2 p-0 mt-4">
         <div class="col-12 text-center">
-            <a href="{% url 'games-apicall' %}" class="btn btn-primary">Call Api?</a>
+            <a href="{% url 'game-add' %}" class="btn btn-outline-light btn-lg add-game-btn">Add Game</a>
         </div>
     </div>
 </div>
