added favourite dropdown menu in game-display

--- a/templates/games/game.html
+++ b/templates/games/game.html
@@ -4,31 +4,75 @@
 
 <div class="container page-container">
     <div class="row g-2 pb-4 text-center">
-        <a href="{% url 'games-shelves' %}" class="display-6 mb-4 text-light text-decoration-none games-shelf-link hvr-grow">Back to shelf</a>
+        <a href="{% url 'games-shelves' %}"
+            class="display-6 mb-4 text-light text-decoration-none games-shelf-link hvr-grow">Back to shelf</a>
     </div>
     <div class="row g-2 pb-2">
         <div class="col-12">
             <div class="card game-display-card">
                 <div class="card-header text-center">
-                    
+
                     <h3 class="display-3">{{ game.name }}</h3>
                     {% if game.release_date %}
                     <p>{{ game.release_date }}</p>
                     {% else %}
                     <p>TBA</p>
                     {% endif %}
-                    <h2><span class="badge bg-primary rounded-pill position-relative fave-badge">
+                    <div class="dropdown">
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-lg btn-primary position-relative fave-badge">
+                                {% if game.favourite %}
+                                Favourite
+                                {% elif game.abs_favourite %}
+                                Favourite
+                                <h5><span
+                                    class="position-absolute top-0 start-0 translate-middle badge rounded-pill bg-danger">
+                                    Absolute
+                                </span></h5>
+                                {% elif game.want %}
+                                Want to play
+                                {% else %}
+                                ???
+                                {% endif %}
+                            </button>
+                            <button type="button" class="btn btn-lg btn-primary dropdown-toggle" data-bs-toggle="dropdown"
+                                aria-expanded="false" data-bs-auto-close="outside">
+                                <span class="visually-hidden">Toggle Dropdown</span>
+                            </button>
+                            <form action="{% url 'game-fave-edit' game.id %}" class="dropdown-menu p-4" method="post">
+                                {% csrf_token %}
+                                <div class="mb-3 form-check">
+                                    <label for="favourite" class="form-label">Favourite</label>
+                                    <input type="radio" name="favourite" id="favourite" class="form-check-input" value='1'>
+                                </div>
+                                <div class="mb-3 form-check">
+                                    <label for="abs_favourite" class="form-label">Absolute Favourite</label>
+                                    <input type="radio" name="favourite" id="abs_favourite" class="form-check-input" value='2'>
+                                </div>
+                                <div class="mb-3 form-check">
+                                    <label for="want" class="form-label">Want to play</label>
+                                    <input type="radio" name="favourite" id="want" class="form-check-input" value='0'>
+                                </div>
+                                <button type="submit" class="btn btn-primary">Confirm</button>
+                            </form>
+                    </div>
+                    </div>
+
+                    <!-- <button type="button" class="btn btn-lg btn-primary rounded-pill position-relative fave-badge">
                         Favourite
-                        <h5><span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                            Absolute
-                        </span></h5>
-                    </span></h2>
+                        <h5><span
+                                class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                                Absolute
+                            </span></h5>
+                    </button> -->
                 </div>
                 <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-ride="true">
                     <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
                         {% for screenshot in game.screenshot_set.all|slice:"1:" %}
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="{{ forloop.counter }}" aria-label="Slide {{ forloop.counter }}"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide-to="{{ forloop.counter }}" aria-label="Slide {{ forloop.counter }}"></button>
                         {% endfor %}
                     </div>
                     <div class="carousel-inner">
@@ -41,15 +85,17 @@
                         </div>
                         {% endfor %}
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
                     </button>
-                  </div>
+                </div>
             </div>
         </div>
     </div>
@@ -58,11 +104,11 @@
             <div class="card game-text-card">
                 <div class="card-header text-center">
                     <h3 class="card-title">
-                    {% if game.my_description %}
+                        {% if game.my_description %}
                         {{ game.my_description }}
                         {% else %}
                         ¯\_(ツ)_/¯
-                    {% endif %}
+                        {% endif %}
                     </h3>
                 </div>
                 <div class="card-body text-center">
